--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <EditText
         android:id="@+id/txtFecha"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="309dp"
+        android:layout_height="56dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="62dp"
         android:layout_marginEnd="52dp"
@@ -24,10 +24,10 @@
 
     <EditText
         android:id="@+id/txtTitulo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginEnd="53dp"
+        android:layout_width="305dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginBottom="42dp"
         android:ems="10"
         android:hint="Titulo"
@@ -41,10 +41,20 @@
         android:id="@+id/btnGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="468dp"
+        android:layout_marginBottom="29dp"
         android:text="Guardar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/lstCompras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />
+
+    <ListView
+        android:id="@+id/lstCompras"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="31dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
