--- a/app/src/main/res/layout/activity_actualizar_lista_compras.xml
+++ b/app/src/main/res/layout/activity_actualizar_lista_compras.xml
@@ -9,8 +9,8 @@
 
     <EditText
         android:id="@+id/txtTituloEditar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="287dp"
+        android:layout_height="47dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="34dp"
@@ -23,10 +23,9 @@
 
     <EditText
         android:id="@+id/txtFechaEditar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="283dp"
+        android:layout_height="44dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="99dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="31dp"
         android:ems="10"
@@ -34,13 +33,15 @@
         app:layout_constraintBottom_toTopOf="@+id/txtTituloEditar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imgAtras" />
 
     <Button
         android:id="@+id/btnActualizarListaCompras"
-        android:layout_width="262dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="15dp"
+        android:layout_width="257dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="74dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginBottom="38dp"
         android:text="Actualizar lista de compras"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,12 +50,12 @@
 
     <ImageView
         android:id="@+id/imgAtras"
-        android:layout_width="43dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="33dp"
+        android:layout_width="39dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="38dp"
-        android:layout_marginBottom="189dp"
-        app:layout_constraintBottom_toTopOf="@+id/lstProductosEditar"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtFechaEditar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_arrow_back_24" />
@@ -63,12 +64,12 @@
         android:id="@+id/lstProductosEditar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="126dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnActualizarListaCompras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgAtras" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTituloEditar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
